--- a/spec/paths/test_phases.yml
+++ b/spec/paths/test_phases.yml
@@ -9,13 +9,13 @@ get:
   parameters:
     - $ref: ../components/parameters/api_key.yml
   responses:
-    '200':
+    "200":
       $ref: ../components/responses/getTestPhasesResponse.yml
-    '404':
+    "404":
       $ref: ../components/responses/NotFound.yml
   x-codeSamples:
-    - lang: 'cURL'
-      label: 'CLI'
+    - lang: "cURL"
+      label: "CLI"
       source: |
         curl --get \
           --data "api_key=生成したAPIキー" \
@@ -26,20 +26,19 @@ post:
     - TestPhase
   summary: テストフェーズの作成
   description: |
-    テストフェーズを作成します。<br>
-    必須項目の値が不正な場合はエラーが返ります。
+    テストフェーズを作成します。
   parameters:
     - $ref: ../components/parameters/api_key.yml
   requestBody:
     $ref: ../components/requestBodies/postTestPhaseRequest.yml
   responses:
-    '201':
+    "201":
       $ref: ../components/responses/postTestPhaseResponse.yml
-    '422':
+    "422":
       $ref: ../components/responses/postFailTestPhaseResponse.yml
   x-codeSamples:
-    - lang: 'cURL'
-      label: 'CLI'
+    - lang: "cURL"
+      label: "CLI"
       source: |
         curl --request POST \
           --header "Content-Type: application/json" \
