--- a/spec/paths/test_phases_{test_phase[id]}_bug_count_snapshots_bulk_create.yml
+++ b/spec/paths/test_phases_{test_phase[id]}_bug_count_snapshots_bulk_create.yml
@@ -5,23 +5,22 @@ post:
   summary: バグカウントの登録
   description: |
     任意のテストフェーズごとチャートにバグカウントを登録します。<br>
-    任意のテストスイート内にテストケースを作成します。<br>
-    必須項目の値が不正な場合はエラーが返ります。
+    任意のテストスイート内にテストケースを作成します。
   parameters:
     - $ref: ../components/parameters/test_phase_id.yml
     - $ref: ../components/parameters/api_key.yml
   requestBody:
     $ref: ../components/requestBodies/postBugCountRequest.yml
   responses:
-    '200':
+    "200":
       $ref: ../components/responses/postBugCountResponse.yml
-    '404':
+    "404":
       $ref: ../components/responses/NotFound.yml
-    '422':
+    "422":
       $ref: ../components/responses/postFailBugCountResponse.yml
   x-codeSamples:
-    - lang: 'cURL'
-      label: 'CLI'
+    - lang: "cURL"
+      label: "CLI"
       source: |
         curl --request POST \
           --header "Content-Type: application/json" \
