--- a/spec/paths/test_suites_{test_suite[id]}.yml
+++ b/spec/paths/test_suites_{test_suite[id]}.yml
@@ -4,12 +4,7 @@ patch:
     - TestSuite
   summary: テストスイートの更新
   description: >
-    テストスイートの情報を更新します。
-
-
-    テストスイート名（test_suite["name"]）を更新する場合、値が入力されないリクエストはエラーが返ります。
-
-
+    テストスイートの情報を更新します。<br>
     テスト定義項目ラベル（test_suite["label_category"]）、テスト結果ラベル（test_suite["label_content1"]）の上限はお申込内容に応じて異なります。
   parameters:
     - $ref: ../components/parameters/test_suite_id.yml
@@ -17,15 +12,15 @@ patch:
   requestBody:
     $ref: ../components/requestBodies/patchTestSuiteRequest.yml
   responses:
-    '200':
+    "200":
       $ref: ../components/responses/patchTestSuiteResponse.yml
-    '404':
+    "404":
       $ref: ../components/responses/NotFound.yml
-    '422':
+    "422":
       $ref: ../components/responses/NoValue.yml
   x-codeSamples:
-    - lang: 'cURL'
-      label: 'CLI'
+    - lang: "cURL"
+      label: "CLI"
       source: |
         curl --request PATCH \
           --header "Content-Type: application/json" \
@@ -44,13 +39,13 @@ delete:
     - $ref: ../components/parameters/test_suite_id.yml
     - $ref: ../components/parameters/api_key.yml
   responses:
-    '204':
+    "204":
       $ref: ../components/responses/NoResponse.yml
-    '404':
+    "404":
       $ref: ../components/responses/NotFound.yml
   x-codeSamples:
-    - lang: 'cURL'
-      label: 'CLI'
+    - lang: "cURL"
+      label: "CLI"
       source: |
         curl --request DELETE \
           "https://cloud.veriserve.co.jp/api/v2/test_suites/[対象のテストスイートid]?api_key=[生成したAPIキー]"
