--- a/spec/paths/test_suites_{test_suite[id]}_test_suite_versions_{test_suite_version[id]}_test_cases.yml
+++ b/spec/paths/test_suites_{test_suite[id]}_test_suite_versions_{test_suite_version[id]}_test_cases.yml
@@ -11,13 +11,13 @@ get:
     - $ref: ../components/parameters/test_suite_version_id.yml
     - $ref: ../components/parameters/api_key.yml
   responses:
-    '200':
+    "200":
       $ref: ../components/responses/getTestCasesResponse.yml
-    '404':
+    "404":
       $ref: ../components/responses/NotFound.yml
   x-codeSamples:
-    - lang: 'cURL'
-      label: 'CLI'
+    - lang: "cURL"
+      label: "CLI"
       source: |
         curl --get \
           --data "api_key=[生成したAPIキー]" \
@@ -28,9 +28,7 @@ post:
     - TestCase
   summary: テストケースの作成
   description: |
-    任意のテストスイート内にテストケースを作成します。
-
-    必須項目の値が不正な場合はエラーが返ります。<br>
+    任意のテストスイート内にテストケースを作成します。<br>
     テスト定義項目（test_case["category"]）の数はお申込内容に応じて異なります(通常25、最大150まで)。
   parameters:
     - $ref: ../components/parameters/test_suite_id.yml
@@ -39,15 +37,15 @@ post:
   requestBody:
     $ref: ../components/requestBodies/postTestCaseRequest.yml
   responses:
-    '201':
+    "201":
       $ref: ../components/responses/postTestCaseResponse.yml
-    '422':
+    "422":
       $ref: ../components/responses/postFailTestCaseResponse.yml
-    '404':
+    "404":
       $ref: ../components/responses/NotFound.yml
   x-codeSamples:
-    - lang: 'cURL'
-      label: 'CLI'
+    - lang: "cURL"
+      label: "CLI"
       source: |
         curl --request POST \
           --header "Content-Type: application/json" \
